# fps_inspector_sdk

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  cmake_build.cmd
python/: README.md  setup.py
python/examples/: measure_fps_basic_sample.py
python/fps_inspector_sdk/: exit_codes.py  fps_inspector.py
src/PresentData/: DxgkrnlEventStructs.hpp  MixedRealityTraceConsumer.cpp  MixedRealityTraceConsumer.hpp  PresentData.vcxproj  PresentData.vcxproj.filters  PresentMonTraceConsumer.cpp  PresentMonTraceConsumer.hpp  SwapChainData.cpp  TraceConsumer.cpp  TraceConsumer.hpp
src/PresentMon/: Logger.cpp  Logger.hpp  PresentMon.cpp  PresentMon.hpp  Privilege.cpp  Privilege.hpp  TraceSession.cpp  TraceSession.hpp
src/Utils/: timing.cpp
src/Utils/inc/: DataBuffer.h  spinlock.h  timing.h
